--- a/createAccount.html
+++ b/createAccount.html
@@ -69,7 +69,7 @@
       localStorage.setItem('user', JSON.stringify(user));
       document.getElementById('message').innerText = "Account created! Redirecting to login...";
       setTimeout(() => {
-        window.location.href = "login.html";
+        window.location.href = "./LoginPage.html";
       }, 2000);
     }
   </script>
