--- a/index.html
+++ b/index.html
@@ -1,110 +1,107 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Login | LoveConnect</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>LoveConnect – Find Your Match</title>
   <style>
     body {
-      background: linear-gradient(to right, #ff758c, #ff7eb3);
-      font-family: Arial, sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-
-    .login-box {
-      background: rgba(255, 255, 255, 0.15);
-      padding: 2rem;
-      border-radius: 12px;
-      box-shadow: 0 0 15px rgba(255, 255, 255, 0.3);
-      color: #fff;
-      text-align: center;
-      width: 350px;
-    }
-
-    input {
-      width: 90%;
-      padding: 10px;
-      margin: 0.5rem 0;
-      border-radius: 6px;
-      border: none;
-    }
-
-    button {
-      width: 100%;
-      padding: 10px;
-      margin-top: 1rem;
-      background: #ff3f6c;
+      margin: 0;
+      padding: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(to right, #ff6f91, #ff9478);
       color: white;
+    }
+
+    header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 1.5rem 3rem;
+      background: rgba(0, 0, 0, 0.1);
+    }
+
+    .logo {
+      font-size: 1.8rem;
+      font-weight: bold;
+    }
+
+    .nav-buttons a {
+      margin-left: 1rem;
+      padding: 0.6rem 1.2rem;
+      background: white;
+      color: #ff3f6c;
+      border-radius: 6px;
+      text-decoration: none;
+      font-weight: bold;
+      transition: background-color 0.3s;
+    }
+
+    .nav-buttons a:hover {
+      background-color: #ffe3ea;
+    }
+
+    .hero {
+      text-align: center;
+      padding: 5rem 2rem;
+      max-width: 800px;
+      margin: 0 auto;
+    }
+
+    .hero h1 {
+      font-size: 3rem;
+      margin-bottom: 1rem;
+    }
+
+    .hero p {
+      font-size: 1.2rem;
+      margin-bottom: 2rem;
+    }
+
+    .hero a {
+      padding: 0.8rem 1.5rem;
+      background-color: #fff;
+      color: #ff3f6c;
       border: none;
       border-radius: 6px;
       font-weight: bold;
-      cursor: pointer;
+      text-decoration: none;
+      font-size: 1rem;
+      transition: background-color 0.3s;
     }
 
-    .links {
-      margin-top: 1rem;
+    .hero a:hover {
+      background-color: #ffe0e8;
+    }
+
+    footer {
+      text-align: center;
+      padding: 2rem;
       font-size: 0.9rem;
-    }
-
-    .links a {
-      color: #fff;
-      text-decoration: underline;
-      margin: 0 0.5rem;
-      cursor: pointer;
-    }
-
-    #error {
-      color: yellow;
-      margin-top: 10px;
+      color: #ffeef2;
     }
   </style>
 </head>
 <body>
 
-  <div class="login-box">
-    <h2>Login</h2>
-    <input type="email" id="email" placeholder="Email" />
-    <input type="password" id="password" placeholder="Password" />
-    <button onclick="login()">Login</button>
-
-    <div class="links">
-      <a href="create.html">Create Account</a> |
-      <a onclick="forgotPassword()">Forgot Password?</a>
+  <header>
+    <div class="logo">💘 LoveConnect</div>
+    <div class="nav-buttons">
+      <a href="./LoginPage.html">Login</a>
+      <a href="./createAccount.html">Create Account</a>
     </div>
+  </header>
 
-    <p id="error"></p>
-  </div>
+  <section class="hero">
+    <h1>Find Love. Make Connections.</h1>
+    <p>Join thousands of singles and meet your perfect match today. LoveConnect is the safe and fun way to build real relationships.</p>
+    <a href="create.html">Get Started</a>
+  </section>
 
-  <script>
-    function login() {
-      const email = document.getElementById('email').value.trim();
-      const password = document.getElementById('password').value;
-      const storedUser = JSON.parse(localStorage.getItem('user'));
-
-      if (!storedUser) {
-        document.getElementById('error').innerText = "No account found. Please sign up.";
-        return;
-      }
-
-      if (email === storedUser.email && password === storedUser.password) {
-        localStorage.setItem('isLoggedIn', 'true');
-        window.location.href = "premium.html";
-      } else {
-        document.getElementById('error').innerText = "Incorrect email or password.";
-      }
-    }
-
-    function forgotPassword() {
-      const storedUser = JSON.parse(localStorage.getItem('user'));
-      if (storedUser) {
-        alert(`Password reminder:\nEmail: ${storedUser.email}\nPassword: ${storedUser.password}`);
-      } else {
-        alert("No account found. Please create one first.");
-      }
-    }
-  </script>
+  <footer>
+    &copy; 2025 LoveConnect. All rights reserved.
+  </footer>
 
 </body>
 </html>
