--- a/premiumPage.html
+++ b/premiumPage.html
@@ -92,7 +92,7 @@
 <body>
 
   <div class="premium-container">
-    <h2>Unlock Premium Features 💎</h2>
+    <h2>Unlock Premium Features 💎 with $20.00</h2>
     <p>Send BTC to the address below to gain lifetime access.</p>
 
     <div class="btc-card">
