--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -20,11 +19,20 @@
       align-items: center;
       padding: 1.5rem 3rem;
       background: rgba(0, 0, 0, 0.1);
+      flex-wrap: wrap;
     }
 
     .logo {
       font-size: 1.8rem;
       font-weight: bold;
+      white-space: nowrap;
+    }
+
+    .nav-buttons {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      margin-top: 1rem;
     }
 
     .nav-buttons a {
@@ -80,6 +88,55 @@
       padding: 2rem;
       font-size: 0.9rem;
       color: #ffeef2;
+    }
+
+    /* Mobile Responsive Styles */
+    @media (max-width: 768px) {
+      header {
+        flex-direction: column;
+        align-items: center;
+        padding: 1rem;
+      }
+
+      .nav-buttons {
+        margin-top: 1rem;
+      }
+
+      .nav-buttons a {
+        margin: 0.5rem 0.3rem;
+        padding: 0.5rem 1rem;
+      }
+
+      .hero h1 {
+        font-size: 2.2rem;
+      }
+
+      .hero p {
+        font-size: 1rem;
+      }
+
+      .hero a {
+        font-size: 0.95rem;
+        padding: 0.7rem 1.2rem;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .hero h1 {
+        font-size: 1.8rem;
+      }
+
+      .hero p {
+        font-size: 0.95rem;
+      }
+
+      .nav-buttons {
+        flex-direction: column;
+      }
+
+      .nav-buttons a {
+        margin: 0.3rem 0;
+      }
     }
   </style>
 </head>
